internal/xds/translator/testdata/out/xds-ir/http-route-with-tlsbundle.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-btls/http
  virtualHosts:
  - domains:
    - '*'
    name: envoy-gateway/gateway-btls/http/*
    routes:
    - match:
        path: /exact
      name: httproute/envoy-gateway/httproute-btls/rule/0/match/0/*
      route:
        cluster: httproute/envoy-gateway/httproute-btls/rule/0
